<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2018. Tina Taylor
  ~
  ~ Creative Commons Attribution License 3.0
  ~
  ~ You are free to:
  ~ Share — copy and redistribute the material in any medium or format
  ~ Adapt — remix, transform, and build upon the material for any purpose, even commercially.
  ~ This license is acceptable for Free Cultural Works.
  ~ The licensor cannot revoke these freedoms as long as you follow the license terms.
  ~
  ~ Under the following terms:
  ~ Attribution — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.
  ~
  ~ No additional restrictions — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.
  ~
  ~ See full license here: https://creativecommons.org/licenses/by/3.0/us/legalcode
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:text="@string/text_game_title" />

    <!-- This section is for the timer -->
    <LinearLayout
        android:id="@+id/timerblock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/text_start_timer" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="3:00" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="@string/text_stop_timer" />

    </LinearLayout>

    <!-- This section is on the left side of the screen-->
    <LinearLayout
        android:id="@+id/scoreboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timerblock"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/GameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/text_teampadding"
                android:text="@string/text_player_1" />

            <TextView
                android:id="@+id/player_1_score"
                style="@style/ScoreDisplays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/text_scorepadding"
                android:text="@string/text_score_p1" />

            <Button
                style="@style/ScoreButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForPlayer1"
                android:text="@string/button_3_letters" />

            <Button
                style="@style/ScoreButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addTwoForPlayer1"
                android:text="@string/button_5_letters" />

            <Button
                style="@style/ScoreButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addThreeForPlayer1"
                android:text="@string/button_6_letters" />

        </LinearLayout>

        <!-- This is the line down the middle -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <!-- This section is on the right side of the screen -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/GameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/text_teampadding"
                android:text="@string/text_player_2" />

            <TextView
                android:id="@+id/player_2_score"
                style="@style/ScoreDisplays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/text_scorepadding"
                android:text="@string/text_score_p2" />

            <Button
                style="@style/ScoreButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addOneForPlayer2"
                android:text="@string/button_3_letters" />

            <Button
                style="@style/ScoreButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addTwoForPlayer2"
                android:text="@string/button_5_letters" />

            <Button
                style="@style/ScoreButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addThreeForPlayer2"
                android:text="@string/button_6_letters" />

        </LinearLayout>

    </LinearLayout>

    <!-- Reset button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/button_layoutmargin"
        android:onClick="reset"
        android:text="@string/button_reset" />

</RelativeLayout>